🏩☝️ Checkpoint ./views/index.html:1744758/100 ./server.js:1744758/36

--- a/views/index.html
+++ b/views/index.html
@@ -65,7 +65,8 @@
             type: 'get',
             data: $('#convertForm').serialize(),
             success: function(data) {
-              $('#result').text(data.string || data);
+              //$('#result').text(data.string || data);
+              $('#result').text(data.data);
               $('#jsonResult').text(JSON.stringify(data));
             }
           });
